--- a/.github/workflows/PROD.yml
+++ b/.github/workflows/PROD.yml
@@ -1,13 +1,19 @@
-name: Fly Deploy
+name: Render Deploy
 on:
   push:
-env:
-  FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+#env:
+#  RENDER_TOKEN: ${{ secrets.RENDER_TOKEN }}
 jobs:
   deploy:
     name: Deploy app
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: flyctl deploy --remote-only
+      - name: Wait for Render Deployment
+          uses: bounceapp/render-action@0.6.0
+          with:
+            render-token: ${{ secrets.RENDER_TOKEN }}
+            github-token: ${{ secrets.GITHUB_TOKEN }}
+            service-id: srv-xxxxxxxxxxxxxxxxxxxx
+#            retries: 20
+#            wait: 16000
+#            sleep: 30000
