--- a/.github/workflows/PROD.yml
+++ b/.github/workflows/PROD.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           render-token: ${{ secrets.RENDER_TOKEN }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          service-id: srv-xxxxxxxxxxxxxxxxxxxx
+#          service-id: srv-xxxxxxxxxxxxxxxxxxxx
           #            retries: 20
           #            wait: 16000
           #            sleep: 30000
