--- a/.github/workflows/PROD.yml
+++ b/.github/workflows/PROD.yml
@@ -1,18 +1,18 @@
 name: Render Deploy
 on:
   push:
-#env:
-#  RENDER_TOKEN: ${{ secrets.RENDER_TOKEN }}
+env:
+  RENDER_TOKEN: ${{ secrets.RENDER_TOKEN }}
 jobs:
   deploy:
     name: Deploy app
     runs-on: ubuntu-latest
     steps:
       - name: Wait for Render Deployment
-        uses: bounceapp/render-action@0.6.0
-        with:
-          render-token: ${{ secrets.RENDER_TOKEN }}
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+        uses: actions/checkout@v1
+#        with:
+#          render-token: ${{ secrets.RENDER_TOKEN }}
+#          github-token: ${{ secrets.GITHUB_TOKEN }}
 #          service-id: srv-xxxxxxxxxxxxxxxxxxxx
           #            retries: 20
           #            wait: 16000
